@@ -8,6 +8,7 @@ exec tclsh "$0" ${1+"$@"}
 
 set distribution   [file dirname [info script]]
 lappend auto_path  [file join $distribution modules]
+lappend auto_path  [file join $distribution/../tcllib modules]
 
 set critcldefault {}
 set critclnotes   {}
@@ -382,7 +383,7 @@ proc ppackages {args} {
     unset p
 
     set ppcache($args) $pp
-    return $pp 
+    return $pp
 }
 
 proc xNULL    {args} {}
@@ -694,7 +695,7 @@ proc getpdesc  {} {
 
     package require sak::doc
     sak::doc::Gen desc l $argv
-    
+
     array set _ {}
     foreach file [glob -nocomplain doc/desc/*.l] {
         set f [open $file r]
@@ -1444,7 +1445,7 @@ proc ::dsrs::Final {} {
 
 	    # We are writing over code required by ourselves.
 	    # For easy recovery in case of problems we save
-	    # the original 
+	    # the original
 
 	    puts "    *Saving original of code important to docstrip/regen itself*"
 	    write_out $o.bak [get_input $o]
@@ -1791,7 +1792,7 @@ proc critcl_module {pkg {extra ""}} {
     set target [file join $distribution modules]
     catch {
         puts "$critcl $extra -force -libdir [list $target] -pkg [list $pkg] $files"
-        eval exec $critcl $extra -force -libdir [list $target] -pkg [list $pkg] $files 
+        eval exec $critcl $extra -force -libdir [list $target] -pkg [list $pkg] $files
     } r
     puts $r
     return
@@ -2181,7 +2182,7 @@ proc _validate_all {} {
     }
     if {$nagelfar == {}} {puts "  Tool 'nagelfar' not found, no check"}
 
-    if {($frink == {}) || ($procheck == {}) || ($tclchecker == {}) 
+    if {($frink == {}) || ($procheck == {}) || ($tclchecker == {})
         || ($nagelfar == {})} {
 	puts "------------------------------------------------------"
     }
@@ -2201,7 +2202,7 @@ proc _validate_all {} {
 	puts "------------------------------------------------------"
     }
     if {$nagelfar    !={}} {
-    	run-nagelfar 
+    	run-nagelfar
 	puts "------------------------------------------------------"
     }
     puts ""
@@ -2257,13 +2258,13 @@ proc _validate_module {m} {
     set procheck [auto_execok procheck]
     set nagelfar [auto_execok nagelfar]
     set tclchecker [auto_execok tclchecker]
-    
+
     if {$frink    == {}} {puts "  Tool 'frink'    not found, no check"}
     if {($procheck == {}) || ($tclchecker == {})} {
 	puts "  Tools 'procheck'/'tclchecker' not found, no check"
     }
     if {$nagelfar == {}} {puts "  Tool 'nagelfar' not found, no check"}
-    
+
     if {($frink == {}) || ($procheck == {}) || ($tclchecker == {}) ||
     	($nagelfar == {})} {
 	puts "------------------------------------------------------"
@@ -2363,7 +2364,7 @@ proc __release {} {
 
 	*
 	* Released and tagged $pname $package_version ========================
-	* 
+	*
 
 "
 
