@@ -1,3 +1,14 @@
+2012-12-02  Arjen Markus  <arjenmarkus@users,sourceforge.net>
+	* plotchart.tcl: Add options -fillcolor and -mediancolor, methods bindlast for histograms and deletedata for xyplots
+	* plotchart.tcl: Changed required version of Tcl to 8.5
+	* plotchart.man: Describe the deletedata subcommand
+	* plotpriv.tcl: New items for histograms (bindlast)
+	* plotaxis.tcl: Check if a legend is empty
+	* plotbind.tcl: Added new procedure BindLastHistogram
+	* pkgIndex.tcl: Bumped version to 2.0.1
+	* plotcontour.tcl: Small corrections in determining colour scale
+	* plotpack.tcl: Use canvas subcommand because of the new feature to add multiple plots in a single canvas widget
+
 2012-08-27  Arjen Markus  <arjenmarkus@users,sourceforge.net>
 	* plotchart.tcl: Correct small problem with right axis
 	* plotaxis.tcl: Implement a different method for labelling the axes
